--- a/views/home.ejs
+++ b/views/home.ejs
@@ -217,6 +217,7 @@
             transition: background-color 0.3s;
             display: flex;
             align-items: center;
+            margin-right: 50px
         }
 
         button svg {
@@ -285,7 +286,12 @@
         <nav class="nav-container">
             <a href="/login" class="logo" data-translate="VHealth">VHealth</a>
             <div class="nav-links">
-                <a href="/scan" data-translate="Home">Home</a>
+                <form action="/scan" method="post">
+                    <div class="form-group1"  style="display: flex; justify-content: space-between;">
+                        <input type="text" id="doctorid" name="doctorname" style="height: 0px; display: none;">
+                        <a href="#" id="a-styling" onclick="this.closest('form').submit(); return false;" data-translate="Home">Home</a>
+                    </div>
+                </form>
                 <a href="/home" data-translate="Dashboard">Dashboard</a>
                 <a href="/login" onclick="loggingOut()" data-translate="Log Out">Log Out</a>
                 <a href="/signup" data-translate="Sign Up">Sign Up</a>
@@ -431,20 +437,15 @@
                         </button>
                     </div>
                 </form>
-                <div class="newstndtbutton">
+                <!-- <div class="newstndtbutton">
                     <form action="/scan" method="post">
                         <div class="form-group1">
-                            <input type="hidden" id="doctorid" name="doctorName">
-                            <button type="submit">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                    <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path>
-                                    <circle cx="12" cy="13" r="4"></circle>
-                                </svg>
-                                <span data-translate="Scan for New Student">Scan for New Student</span>
-                            </button>
+                            <input type="text" id="doctorid" name="doctorname" style="height: 0px; display: none; ">
+                            <br>
+                            <button type="submit"><a id="a-styling">Scan for New Student</a></button>
                         </div>
                     </form>
-                </div>
+                </div> -->
             </div>
 
             <div class="certificate" id="medicalCertificate" style="display: none;">
